--- a/index.html
+++ b/index.html
@@ -3,91 +3,95 @@
 <head>
 	<meta charset="utf-8">
 	<title>Минск: история, люди, факты</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style2.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
-	<div id="fon">
-		<div class="center">
-			<ul>
-				<li class="do"><a href="#"><span data-attr="До">До</span><span data-attr="войны">войны</span></a></li>
-				<li class="pervii"><a href="#"><span data-attr="В">В</span><span data-attr="1941">1941</span></a>
-					<ul class="submenu1">
-						<li class="pervi" ><a href="" >Июнь</a></li>
-						<li class="pervi"><a href="">Июль</a></li>
-						<li class="pervi"><a href="">Август</a></li>
-						<li class="pervi"><a href="">Сентябрь</a></li>
-						<li class="pervi"><a href="">Октябрь</a></li>
-						<li class="pervi"><a href="">Ноябрь</a></li>
-						<li class="pervi"><a href="">Декабрь</a></li>
-					  </ul>
-				</li>
-				<li class="vtoroi"><a href="#"><span data-attr="В">В</span><span data-attr="1942">1942</span></a>
-					<ul class="submenu2">
-						<li class="vtor"><a href="">Январь</a></li>
-						<li class="vtor"><a href="">Февраль</a></li>
-						<li class="vtor"><a href="">Март</a></li>
-						<li class="vtor"><a href="">Апрель</a></li>
-						<li class="vtor"><a href="">Май</a></li>
-						<li class="vtor"><a href="" >Июнь</a></li>
-						<li class="vtor"><a href="">Июль</a></li>
-						<li class="vtor"><a href="">Август</a></li>
-						<li class="vtor"><a href="">Сентябрь</a></li>
-						<li class="vtor"><a href="">Октябрь</a></li>
-						<li class="vtor"><a href="">Ноябрь</a></li>
-						<li class="vtor"><a href="">Декабрь</a></li>
-					  </ul>
-				</li>				
-				<li class="tretii"><a href="#"><span data-attr="В">В</span><span data-attr="1943">1943</span></a>
-					<ul class="submenu3">
-						<li class="trit"><a href="">Январь</a></li>
-						<li class="trit"><a href="">Февраль</a></li>
-						<li class="trit"><a href="">Март</a></li>
-						<li class="trit"><a href="">Апрель</a></li>
-						<li class="trit"><a href="">Май</a></li>
-						<li class="trit"><a href="" >Июнь</a></li>
-						<li class="trit"><a href="">Июль</a></li>
-						<li class="trit"><a href="">Август</a></li>
-						<li class="trit"><a href="">Сентябрь</a></li>
-						<li class="trit"><a href="">Октябрь</a></li>
-						<li class="trit"><a href="">Ноябрь</a></li>
-						<li class="trit"><a href="">Декабрь</a></li>
-					</ul>
-				</li>				
-				<li class="chetvertii"><a href="#"><span data-attr="В">В</span><span data-attr="1944">1944</span></a>
-					<ul class="submenu4">
-						<li class="chet"><a href="">Январь</a></li>
-						<li class="chet"><a href="">Февраль</a></li>
-						<li class="chet"><a href="">Март</a></li>
-						<li class="chet"><a href="">Апрель</a></li>
-						<li class="chet"><a href="">Май</a></li>
-						<li class="chet"><a href="" >Июнь</a></li>
-						<li class="chet"><a href="">Июль</a></li>
-						<li class="chet"><a href="">Август</a></li>
-						<li class="chet"><a href="">Сентябрь</a></li>
-						<li class="chet"><a href="">Октябрь</a></li>
-						<li class="chet"><a href="">Ноябрь</a></li>
-						<li class="chet"><a href="">Декабрь</a></li>
-					  </ul>
+	
+			<div class="center">
+				<ul>
+					<li class="do"><a href="#"><span data-attr="До">До</span><span data-attr="войны">войны</span></a></li>
+					<li class="pervii"><a href="#"><span data-attr="В">В</span><span data-attr="1941">1941</span></a>
+						<ul class="submenu1">
+							<li class="pervi" ><a href="" >Июнь</a></li>
+							<li class="pervi"><a href="">Июль</a></li>
+							<li class="pervi"><a href="">Август</a></li>
+							<li class="pervi"><a href="">Сентябрь</a></li>
+							<li class="pervi"><a href="">Октябрь</a></li>
+							<li class="pervi"><a href="">Ноябрь</a></li>
+							<li class="pervi"><a href="">Декабрь</a></li>
+						  </ul>
 					</li>
-				<li class="pjatii"><a href="#"><span data-attr="В">В</span><span data-attr="1945">1945</span></a>
-					<ul class="submenu5">
-						<li class="pjat"><a href="">Январь</a></li>
-						<li class="pjat"><a href="">Февраль</a></li>
-						<li class="pjat"><a href="">Март</a></li>
-						<li class="pjat"><a href="">Апрель</a></li>
-						<li class="pjat"><a href="">Май</a></li>
-					  </ul>
-				</li>				
-				<li class="posle"><a href="#"><span data-attr="После">После</span><span data-attr="войны">войны</span></a></li>
-			</ul>
+					<li class="vtoroi"><a href="#"><span data-attr="В">В</span><span data-attr="1942">1942</span></a>
+						<ul class="submenu2">
+							<li class="vtor"><a href="">Январь</a></li>
+							<li class="vtor"><a href="">Февраль</a></li>
+							<li class="vtor"><a href="">Март</a></li>
+							<li class="vtor"><a href="">Апрель</a></li>
+							<li class="vtor"><a href="">Май</a></li>
+							<li class="vtor"><a href="" >Июнь</a></li>
+							<li class="vtor"><a href="">Июль</a></li>
+							<li class="vtor"><a href="">Август</a></li>
+							<li class="vtor"><a href="">Сентябрь</a></li>
+							<li class="vtor"><a href="">Октябрь</a></li>
+							<li class="vtor"><a href="">Ноябрь</a></li>
+							<li class="vtor"><a href="">Декабрь</a></li>
+						  </ul>
+					</li>				
+					<li class="tretii"><a href="#"><span data-attr="В">В</span><span data-attr="1943">1943</span></a>
+						<ul class="submenu3">
+							<li class="trit"><a href="">Январь</a></li>
+							<li class="trit"><a href="">Февраль</a></li>
+							<li class="trit"><a href="">Март</a></li>
+							<li class="trit"><a href="">Апрель</a></li>
+							<li class="trit"><a href="">Май</a></li>
+							<li class="trit"><a href="" >Июнь</a></li>
+							<li class="trit"><a href="">Июль</a></li>
+							<li class="trit"><a href="">Август</a></li>
+							<li class="trit"><a href="">Сентябрь</a></li>
+							<li class="trit"><a href="">Октябрь</a></li>
+							<li class="trit"><a href="">Ноябрь</a></li>
+							<li class="trit"><a href="">Декабрь</a></li>
+						</ul>
+					</li>				
+					<li class="chetvertii"><a href="#"><span data-attr="В">В</span><span data-attr="1944">1944</span></a>
+						<ul class="submenu4">
+							<li class="chet"><a href="">Январь</a></li>
+							<li class="chet"><a href="">Февраль</a></li>
+							<li class="chet"><a href="">Март</a></li>
+							<li class="chet"><a href="">Апрель</a></li>
+							<li class="chet"><a href="">Май</a></li>
+							<li class="chet"><a href="" >Июнь</a></li>
+							<li class="chet"><a href="">Июль</a></li>
+							<li class="chet"><a href="">Август</a></li>
+							<li class="chet"><a href="">Сентябрь</a></li>
+							<li class="chet"><a href="">Октябрь</a></li>
+							<li class="chet"><a href="">Ноябрь</a></li>
+							<li class="chet"><a href="">Декабрь</a></li>
+						  </ul>
+						</li>
+					<li class="pjatii"><a href="#"><span data-attr="В">В</span><span data-attr="1945">1945</span></a>
+						<ul class="submenu5">
+							<li class="pjat"><a href="">Январь</a></li>
+							<li class="pjat"><a href="">Февраль</a></li>
+							<li class="pjat"><a href="">Март</a></li>
+							<li class="pjat"><a href="">Апрель</a></li>
+							<li class="pjat"><a href="">Май</a></li>
+						  </ul>
+					</li>				
+					<li class="posle"><a href="#"><span data-attr="После">После</span><span data-attr="войны">войны</span></a></li>
+				</ul>
+			</div>	
+			<div class="fon">
+			<div id="fon"></div>
 		</div>
-			</div>		
+		<div class="logo animate__animated animate__pulse"></div>
 <script>
 document.querySelectorAll('.do').forEach((el) => {
     el.addEventListener('mouseenter', function() {    
       let index = [...this.parentNode.children].indexOf(this);
 			if (index==0) {
-			document.querySelector('#fon').className = 'dovoini'
+			document.querySelector('#fon').className = 'dovoini animate__animated animate__backInDown'
 			}
 			console.log(index);
 		})
@@ -97,7 +101,7 @@ document.querySelectorAll('.do').forEach((el) => {
     el.addEventListener('mouseenter', function() {    
       let index = [...this.parentNode.children].indexOf(this);
 			if (index==6) {
-			document.querySelector('#fon').className = 'poslevoini'
+			document.querySelector('#fon').className = 'poslevoini animate__animated animate__backInDown'
 			}
 			console.log(index);
 		})
@@ -107,19 +111,19 @@ document.querySelectorAll('.do').forEach((el) => {
     el.addEventListener('mouseenter', function() {    
       let index = [...this.parentNode.children].indexOf(this);
 			if (index==0) {
-			document.querySelector('#fon').className = 'iyun1941'
+			document.querySelector('#fon').className = 'iyun1941 animate__animated animate__backInDown'
 			}else if (index===1){
-			document.querySelector('#fon').className = 'iyul1941'
+			document.querySelector('#fon').className = 'iyul1941 animate__animated animate__backInDown'
 			}else if (index==2){
-			document.querySelector('#fon').className = 'aug1941'
+			document.querySelector('#fon').className = 'aug1941 animate__animated animate__backInDown'
 			}else if (index==3){
-			document.querySelector('#fon').className = 'sep1941'
+			document.querySelector('#fon').className = 'sep1941 animate__animated animate__backInDown'
 			}else if (index==4){
-			document.querySelector("#fon").className = 'oct1941'
+			document.querySelector("#fon").className = 'oct1941 animate__animated animate__backInDown'
 			}else if (index==5){
-			document.querySelector('#fon').className = 'nov1941'
+			document.querySelector('#fon').className = 'nov1941 animate__animated animate__backInDown'
 			}else if (index===6){
-			document.querySelector('#fon').className = 'dec1941'
+			document.querySelector('#fon').className = 'dec1941 animate__animated animate__backInDown'
 			}
 		
       console.log(index);
@@ -130,29 +134,29 @@ document.querySelectorAll('.do').forEach((el) => {
     el.addEventListener('mouseenter', function() {    
       let index = [...this.parentNode.children].indexOf(this);
 			if (index==0) {
-			document.querySelector('#fon').className = 'yan1942'
+			document.querySelector('#fon').className = 'yan1942 animate__animated animate__backInDown'
 			}else if (index===1){
-			document.querySelector('#fon').className = 'feb1942'
+			document.querySelector('#fon').className = 'feb1942 animate__animated animate__backInDown'
 			}else if (index==2){
-			document.querySelector('#fon').className = 'mart1942'
+			document.querySelector('#fon').className = 'mart1942 animate__animated animate__backInDown'
 			}else if (index==3){
-			document.querySelector('#fon').className = 'apr1942'
+			document.querySelector('#fon').className = 'apr1942 animate__animated animate__backInDown'
 			}else if (index==4){
-			document.querySelector("#fon").className = 'maj1942'
+			document.querySelector("#fon").className = 'maj1942 animate__animated animate__backInDown'
 			}else if (index==5){
-			document.querySelector('#fon').className = 'iyun1942'
+			document.querySelector('#fon').className = 'iyun1942 animate__animated animate__backInDown'
 			}else if (index===6){
-			document.querySelector('#fon').className = 'iyul1942'
+			document.querySelector('#fon').className = 'iyul1942 animate__animated animate__backInDown'
 			}else if (index===7){
-			document.querySelector('#fon').className = 'avg1942'
+			document.querySelector('#fon').className = 'avg1942 animate__animated animate__backInDown'
 			}else if (index==8){
-			document.querySelector('#fon').className = 'sept1942'
+			document.querySelector('#fon').className = 'sept1942 animate__animated animate__backInDown'
 			}else if (index==9){
-			document.querySelector('#fon').className = 'oct1942'
+			document.querySelector('#fon').className = 'oct1942 animate__animated animate__backInDown'
 			}else if (index==10){
-			document.querySelector("#fon").className = 'nov1942'
+			document.querySelector("#fon").className = 'nov1942 animate__animated animate__backInDown'
 			}else if (index==11){
-			document.querySelector('#fon').className = 'dec1942'
+			document.querySelector('#fon').className = 'dec1942 animate__animated animate__backInDown'
 			}
 		
       console.log(index);
@@ -163,29 +167,29 @@ document.querySelectorAll('.do').forEach((el) => {
     el.addEventListener('mouseenter', function() {    
       let index = [...this.parentNode.children].indexOf(this);
 			if (index==0) {
-			document.querySelector('#fon').className = 'yan1943'
+			document.querySelector('#fon').className = 'yan1943 animate__animated animate__backInDown'
 			}else if (index===1){
-			document.querySelector('#fon').className = 'feb1943'
+			document.querySelector('#fon').className = 'feb1943 animate__animated animate__backInDown'
 			}else if (index==2){
-			document.querySelector('#fon').className = 'mart1943'
+			document.querySelector('#fon').className = 'mart1943 animate__animated animate__backInDown'
 			}else if (index==3){
-			document.querySelector('#fon').className = 'apr1943'
+			document.querySelector('#fon').className = 'apr1943 animate__animated animate__backInDown'
 			}else if (index==4){
-			document.querySelector("#fon").className = 'maj1943'
+			document.querySelector("#fon").className = 'maj1943 animate__animated animate__backInDown'
 			}else if (index==5){
-			document.querySelector('#fon').className = 'iyun1943'
+			document.querySelector('#fon').className = 'iyun1943 animate__animated animate__backInDown'
 			}else if (index===6){
-			document.querySelector('#fon').className = 'iyul1943'
+			document.querySelector('#fon').className = 'iyul1943 animate__animated animate__backInDown'
 			}else if (index===7){
-			document.querySelector('#fon').className = 'avg1943'
+			document.querySelector('#fon').className = 'avg1943 animate__animated animate__backInDown'
 			}else if (index==8){
-			document.querySelector('#fon').className = 'sept1943'
+			document.querySelector('#fon').className = 'sept1943 animate__animated animate__backInDown'
 			}else if (index==9){
-			document.querySelector('#fon').className = 'oct1943'
+			document.querySelector('#fon').className = 'oct1943 animate__animated animate__backInDown'
 			}else if (index==10){
-			document.querySelector("#fon").className = 'nov1943'
+			document.querySelector("#fon").className = 'nov1943 animate__animated animate__backInDown'
 			}else if (index==11){
-			document.querySelector('#fon').className = 'dec1943'
+			document.querySelector('#fon').className = 'dec1943 animate__animated animate__backInDown'
 			}
 		
       console.log(index);
@@ -196,29 +200,29 @@ document.querySelectorAll('.do').forEach((el) => {
     el.addEventListener('mouseenter', function() {    
       let index = [...this.parentNode.children].indexOf(this);
 			if (index==0) {
-			document.querySelector('#fon').className = 'yan1944'
+			document.querySelector('#fon').className = 'yan1944 animate__animated animate__backInDown'
 			}else if (index===1){
-			document.querySelector('#fon').className = 'feb1944'
+			document.querySelector('#fon').className = 'feb1944 animate__animated animate__backInDown'
 			}else if (index==2){
-			document.querySelector('#fon').className = 'mart1944'
+			document.querySelector('#fon').className = 'mart1944 animate__animated animate__backInDown'
 			}else if (index==3){
-			document.querySelector('#fon').className = 'apr1944'
+			document.querySelector('#fon').className = 'apr1944 animate__animated animate__backInDown'
 			}else if (index==4){
-			document.querySelector("#fon").className = 'mai1944'
+			document.querySelector("#fon").className = 'mai1944 animate__animated animate__backInDown'
 			}else if (index==5){
-			document.querySelector('#fon').className = 'iyun1944'
+			document.querySelector('#fon').className = 'iyun1944 animate__animated animate__backInDown'
 			}else if (index===6){
-			document.querySelector('#fon').className = 'iyul1944'
+			document.querySelector('#fon').className = 'iyul1944 animate__animated animate__backInDown'
 			}else if (index===7){
-			document.querySelector('#fon').className = 'avg1944'
+			document.querySelector('#fon').className = 'avg1944 animate__animated animate__backInDown'
 			}else if (index==8){
-			document.querySelector('#fon').className = 'sept1944'
+			document.querySelector('#fon').className = 'sept1944 animate__animated animate__backInDown'
 			}else if (index==9){
-			document.querySelector('#fon').className = 'oct1944'
+			document.querySelector('#fon').className = 'oct1944 animate__animated animate__backInDown'
 			}else if (index==10){
-			document.querySelector("#fon").className = 'nov1944'
+			document.querySelector("#fon").className = 'nov1944 animate__animated animate__backInDown'
 			}else if (index==11){
-			document.querySelector('#fon').className = 'dec1944'
+			document.querySelector('#fon').className = 'dec1944 animate__animated animate__backInDown'
 			}
 		
       console.log(index);
@@ -229,15 +233,15 @@ document.querySelectorAll('.do').forEach((el) => {
     el.addEventListener('mouseenter', function() {    
       let index = [...this.parentNode.children].indexOf(this);
 			if (index==0) {
-			document.querySelector('#fon').className = 'jan1945'
+			document.querySelector('#fon').className = 'jan1945 animate__animated animate__backInDown'
 			}else if (index===1){
-			document.querySelector('#fon').className = 'feb1945'
+			document.querySelector('#fon').className = 'feb1945 animate__animated animate__backInDown'
 			}else if (index==2){
-			document.querySelector('#fon').className = 'mart1945'
+			document.querySelector('#fon').className = 'mart1945 animate__animated animate__backInDown'
 			}else if (index==3){
-			document.querySelector('#fon').className = 'apr1945'
+			document.querySelector('#fon').className = 'apr1945 animate__animated animate__backInDown'
 			}else if (index==4){
-			document.querySelector("#fon").className = 'mai1945'
+			document.querySelector("#fon").className = 'mai1945 animate__animated animate__backInDown'
 			}	
       console.log(index);
 		})
